--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
         <repository>
             <id>github</id>
             <name>GitHub Packages</name>
-            <url>https://maven.pkg.github.com/KADA-SEDODE/scala_project.git</url>
+            <url>https://maven.pkg.github.com/KADA-SEDODE/scala_project</url>
         </repository>
     </distributionManagement>
 </project>
